force-app/main/default/objects/Asset/fields/af_IoT_status__c.field-meta.xml
<CustomField>
    <fullName>af_IoT_status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks the IoT status of the device</description>
    <label>IoT status</label>
    <type>Checkbox</type>
</CustomField>