force-app/main/default/objects/Asset/fields/demo_key__c.field-meta.xml
<CustomField>
    <fullName>demo_key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>demo key</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>