force-app/main/default/objects/Asset/fields/Image_url__c.field-meta.xml
<CustomField>
    <fullName>Image_url__c</fullName>
    <label>Image url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>