force-app/main/default/objects/Asset/fields/operational__c.field-meta.xml
<CustomField>
    <fullName>operational__c</fullName>
    <defaultValue>false</defaultValue>
    <label>operational</label>
    <type>Checkbox</type>
</CustomField>