force-app/main/default/objects/Asset/fields/Test_Drive__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Drive</label>
    <referenceTo>Test_Drive__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>