force-app/main/default/objects/Asset/fields/Tyre_Model__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Model__c</fullName>
    <label>Tyre Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>