force-app/main/default/objects/Asset/fields/Vehicle_Version__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Version__c</fullName>
    <label>Vehicle Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>