force-app/main/default/objects/Asset/listViews/Autoforce.listView-meta.xml
<ListView>
    <fullName>Autoforce</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>demo_key__c</columns>
    <columns>operational__c</columns>
    <columns>VIN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>demo_key__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Autoforce</label>
</ListView>